fix: now using URL instead of URI for base context (#97)